RESOLVED FIXED 52551
AffineTransform::translateRight incorrectly computes a translateLeft.
https://bugs.webkit.org/show_bug.cgi?id=52551
Summary AffineTransform::translateRight incorrectly computes a translateLeft.
Shane Stephens
Reported 2011-01-16 22:09:43 PST
AffineTransform::translateRight incorrectly computes a translateLeft.
Attachments
Patch (7.64 KB, patch)
2011-01-16 22:10 PST, Shane Stephens
no flags
Patch (7.64 KB, patch)
2011-01-16 22:22 PST, Shane Stephens
no flags
Shane Stephens
Comment 1 2011-01-16 22:10:52 PST
WebKit Review Bot
Comment 2 2011-01-16 22:12:15 PST
Attachment 79125 [details] did not pass style-queue: Failed to run "['Tools/Scripts/check-webkit-style', '--diff-files', u'Source/WebCore/ChangeLog', u'Source/WebCor..." exit_code: 1 Source/WebCore/ChangeLog:11: Line contains tab character. [whitespace/tab] [5] Total errors found: 1 in 6 files If any of these errors are false positives, please file a bug against check-webkit-style.
Shane Stephens
Comment 3 2011-01-16 22:22:34 PST
Shane Stephens
Comment 4 2011-01-16 22:24:21 PST
The attached patch removes translateRight from AffineTransform and uses standard matrix multiplication where translateRight was previously used. See http://bugs.webkit.org/show_bug.cgi?id=48031 for more context & discussion. Please don't commit this patch until 48031 is committed! Otherwise approximately 40 layout tests will break :)
WebKit Commit Bot
Comment 5 2011-01-31 10:11:23 PST
Comment on attachment 79126 [details] Patch Clearing flags on attachment: 79126 Committed r77140: <http://trac.webkit.org/changeset/77140>
WebKit Commit Bot
Comment 6 2011-01-31 10:11:28 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.