2011-01-31  Shane Stephens  <shanestephens@google.com>

Reviewed by Simon Fraser.

        AffineTransform::translateRight incorrectly computes a translateLeft.
        https://bugs.webkit.org/show_bug.cgi?id=52551

        Removed translateRight and converted all uses to perform standard
        matrix multiplication.

        No new tests because patch doesn't modify functionality.

        * platform/graphics/transforms/AffineTransform.cpp:
        * platform/graphics/transforms/AffineTransform.h:
        (WebCore::AffineTransform::translation):
        * rendering/svg/RenderSVGResourceMarker.cpp:
        (WebCore::RenderSVGResourceMarker::localToParentTransform):
        * rendering/svg/RenderSVGRoot.cpp:
        (WebCore::RenderSVGRoot::localToRepaintContainerTransform):
        (WebCore::RenderSVGRoot::localToParentTransform):
        * rendering/svg/RenderSVGViewportContainer.cpp:
        (WebCore::RenderSVGViewportContainer::localToParentTransform):
        * rendering/svg/SVGTextLayoutEngine.cpp:
        (WebCore::SVGTextLayoutEngine::finalizeTransformMatrices):

Canonical link: https://commits.webkit.org/67291@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@77140 268f45cc-cd09-0410-ab3c-d52691b4dbfc